# pauli-prop

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: docs.yml  release.yml  test_development_versions.yml  test_latest_versions.yml  test_minimum_versions.yml
cuda/: CMakeLists.txt  README.md  __init__.py  bob-summary.txt  pauli_prop_cuda.cu  pauli_prop_cuda.h  python_bindings.cpp
docs/: index.rst  install.rst
docs/apidocs/: index.rst
docs/guides/: index.rst  quickstart.ipynb  simulate_127Q_kicked_ising.ipynb  simulate_noisy_expectation_values.ipynb
docs/tutorials/: 01_classically_estimate_expectation_values.ipynb  02_simulate_127Q_kicked_ising.ipynb  03_simulate_noisy_expectation_values.ipynb  simulate_kicked_ising.ipynb
pauli_prop/: propagation.py
pauli_propagation/: propagation.py
python/pauli_prop/: __init__.py  propagation.py
releasenotes/notes/: noisy-prop-58617566a374350e.yaml
src/: lib.rs
test/: test_propagation.py
